--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue": "^3.2.13"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.0.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0"
   }
